--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ h1 {
     color: #555;
 }
 
-/* Centered File Selection */
 .file-container {
     display: flex;
     flex-direction: column;
@@ -57,7 +56,6 @@ h1 {
     color: #333;
 }
 
-/* Centered City Name */
 .form-group {
     margin-top: 10px;
     display: flex;
@@ -228,6 +226,9 @@ h1 {
     .file-container {
         flex-direction: column;
         align-items: center;
+    }
+    .city-label{
+        font-weight: 600;
     }
 
     .city-input {
